# AutoSort

./: .gitignore  CMakeLists.txt  Dockerfile  IFLOW.md  Linux-安装说明.md  README.md  build_linux.sh  build_with_docker.sh  package_appimage.sh  rules.json  test_compile.cpp
android_autosort/: IFLOW.md  README.md  build.gradle  settings.gradle.kts
android_autosort/app/: autosort-release.keystore  build.gradle
android_autosort/app/src/main/: AndroidManifest.xml
android_autosort/app/src/main/java/com/autosort/app/: MainActivity.kt  SettingsActivity.kt
android_autosort/app/src/main/java/com/autosort/app/adapter/: LogAdapter.kt  RulesAdapter.kt
android_autosort/app/src/main/java/com/autosort/app/core/: FileOrganizer.kt
android_autosort/app/src/main/java/com/autosort/app/model/: LogEntry.kt  SortRule.kt
android_autosort/app/src/main/java/com/autosort/app/receiver/: BootReceiver.kt
android_autosort/app/src/main/java/com/autosort/app/service/: FileMonitorService.kt
android_autosort/app/src/main/java/com/autosort/app/utils/: PreferencesManager.kt
android_autosort/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_settings.xml  ic_sort.xml  status_indicator_off.xml
android_autosort/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_edit_rule.xml  item_log.xml  item_rule.xml
android_autosort/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_autosort/app/src/main/res/xml/: file_paths.xml
resources/translations/: autosort_en.ts
src/: batchrenamedialog.cpp  batchrenamedialog.h  common.h  conflictresolutiondialog.cpp  conflictresolutiondialog.h  filefilterdialog.cpp  filefilterdialog.h  fileorganizer.cpp  fileorganizer.h  filepreviewdialog.cpp  filepreviewdialog.h  filesearchdialog.cpp  filesearchdialog.h  logmanager.cpp  logmanager.h  logviewerdialog.cpp  logviewerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog_new.cpp  statistics.cpp  statistics.h  statisticsdialog.cpp  statisticsdialog.h
